@@ -1,5 +1,6 @@
 2013-11-19  Roland Clobus <rclobus@rclobus.nl>
 	* common/Makefile.am: Build version.h when needed.
+	* client/gtk/connect.c: GtkObject->GtkAdjustment (for Gtk+3).
 
 2013-11-17  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Enable (experimental) support for Gtk+3.
